@@ -11,6 +11,7 @@ from collective.solr.utils import isActive, prepareData
 from collective.solr.mangler import mangleQuery
 from collective.solr.mangler import extractQueryParameters
 from collective.solr.mangler import cleanupQueryParameters
+from collective.solr.mangler import optimizeQueryParameters
 
 from collective.solr.monkey import patchCatalogTool, patchLazyCat
 patchCatalogTool()      # patch catalog tool to use the dispatcher...
@@ -77,6 +78,8 @@ def solrSearchResults(request=None, **keywords):
     mangleQuery(args)
     prepareData(args)
     query = search.buildQuery(**args)
+    optimizeQueryParameters(query, params)
+    query = ' '.join(query.values())
     __traceback_info__ = (query, params, args)
     response = search(query, fl='* score', **params)
     def wrap(flare):
