@@ -49,7 +49,7 @@ class Search(object):
         schema = self.getManager().getSchema() or {}
         defaultSearchField = getattr(schema, 'defaultSearchField', None)
         args[None] = default
-        query = []
+        query = {}
         for name, value in args.items():
             field = schema.get(name or defaultSearchField, None)
             if field is None or not field.indexed:
@@ -82,9 +82,8 @@ class Search(object):
             if name is None:
                 if value and value[0] not in '+-':
                     value = '+%s' % value
-                query.append(value)
             else:
-                query.append('+%s:%s' % (name, value))
-        query = ' '.join(query)
+                value = '+%s:%s' % (name, value)
+            query[name] = value
         logger.debug('built query "%s"', query)
         return query
